--- a/demo/test.html
+++ b/demo/test.html
@@ -24,7 +24,8 @@
       initCounty: '西城区',
       initTown: '月坛街道办事处',
       initVillage: '南礼士路社区居委会',
-      fineness: 'town'
+      fineness: 'town',
+      url: '/Users/frank/Github/Address'
     };
     $(".wan-address-select").WanAddressSelect(options);
 
