set default url

--- a/demo/test.html
+++ b/demo/test.html
@@ -24,8 +24,7 @@
       initCounty: '西城区',
       initTown: '月坛街道办事处',
       initVillage: '南礼士路社区居委会',
-      fineness: 'town',
-      url: '/Users/frank/Github/Address'
+      fineness: 'town'
     };
     $(".wan-address-select").WanAddressSelect(options);
 
